@@ -31,6 +31,7 @@
 * VisaNet Peru: Add merchant_define_data option [duff]
 * Merchant e-Solutions: pass optional 3Dsecure params [curiousepic]
 * NMI: Fix refunds and voids of echecks [duff]
+* VisaNet Peru: Pass dummy email when not present [curiousepic]
 
 
 == Version 1.58.0 (March 1, 2016)
